chore: fix clipping issue

--- a/src/views/collections/framework-field-guide/components/your-guide-text-container-back.module.scss
+++ b/src/views/collections/framework-field-guide/components/your-guide-text-container-back.module.scss
@@ -36,6 +36,8 @@
 	background-clip: text;
 	color: transparent;
 	margin: 0;
+	position: relative;
+	z-index: 3;
 }
 
 .handwrittenContainer {
